[package]
name = "url-tail"
description = """
    Similar to unix-tail utility, but uses Range requests over HTTP to fetch
    the data. Useful in scenarios where logs are accessible over HTTP for
    some reason.
"""
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["url", "fetch", "log", "tail"]
categories = ["command-line-utilities"]
homepage = "https://github.com/tailhook/url-tail"
documentation = "https://github.com/tailhook/url-tail"
version = "0.1.1"
authors = ["paul@colomiets.name"]

[dependencies]
abstract-ns = "0.4.1"
ns-router = "0.1.1"
ns-std-threaded = "0.3.0"
tk-http = "0.3.2"
quick-error = "1.2.0"
argparse = "0.2.1"
url = "1.5.1"
futures = "0.1.16"
futures-cpupool = "0.1.7"
tokio-core = "0.1.10"
env_logger = "0.4.3"
tk-easyloop =  "0.1.1"
log = "0.3.8"
webpki-roots = { version="0.13.0", optional=true }

rustls = { version="0.11.0", optional=true }
tokio-rustls = { version="0.4.0", optional=true }

native-tls = { version="0.1.4", optional=true }
tokio-tls = { version="0.1.3", optional=true }

[features]
default = ["tls_native"]
tls_native = ["native-tls", "tokio-tls"]
tls_rustls = ["rustls", "tokio-rustls", "webpki-roots"]

[[bin]]
name = "url-tail"
